# final-nn

./: digit_autoencoder.ipynb  pyproject.toml  transcript_classifier.ipynb
.github/workflows/: test.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
