[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hmm"
authors = [{name = "Fiona Duong", email="fiona.duong2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "scikit-learn", "matplotlib"
]

[project.urls]
Home = "https://github.com/duongfiona/final-nn.git"
